# csv-to-json

./: Cargo.toml  README.md
res/: example_big.csv  examples_no_headers.csv  examples_semicolon.csv  examples_small.csv  examples_wide.csv
src/: main.rs
