[package]
name = "csv-to-json"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.21", features = ["derive"] }
crossbeam-channel = "0.5.13"
csv = "1.3.0"
num_cpus = "1.16.0"
rayon = "1.10.0"
serde_json = "1.0.128"
sha2 = "0.10.8"
uuid = { version = "1.11.0", features = ["v4"] }
